POWR-1127 added padding to bottom of container to prevent text from getting cut off in media embed add dialog

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -102,3 +102,8 @@ span.next-link .fas {
 .view-admin-group-content table .form-item {
   margin-top: 0;
 }
+
+/* fix for revision log message field getting cut off in media modal dialog */
+#edit-inline-entity-form-revision-log-message-wrapper {
+  padding-bottom: 1px;
+}
